# HashScout

./: .gitignore  README.md  pyproject.toml
hscout/: __main__.py
