[tool.poetry]
name = "hashscout"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py7zr = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
